argo-vpol/application-prevent-updates-project/.chainsaw-test/application-update.yaml
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: goodapp
  namespace: default
spec:
  project: biz
  source:
    repoURL: https://github.com/argoproj/argocd-example-apps.git
    targetRevision: HEAD
    path: book
  destination:
    server: https://kubernetes.default.svc
    namespace: book
