argo-vpol/application-prevent-updates-project/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: application-prevent-updates-project
spec:
  template: false
  steps:
    - name: step-01
      try:
        - assert:
            file: crd-assert.yaml
        - apply:
            file: rbac.yaml
    - name: step-02
      try:
        - apply:
            file: ../application-prevent-updates-project.yaml
        - patch:
            resource:
              apiVersion: policies.kyverno.io/v1
              kind: ValidatingPolicy
              metadata:
                name: application-prevent-updates-project
              spec:
                validationActions: [Deny]
        - assert:
            file: policy-ready.yaml
    - name: step-03
      try:
        - apply:
            file: application.yaml
        - apply:
            file: application-update.yaml
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: application-bad-update.yaml
